--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/serve": "^1.7.2",
     "jotai": "^1.8.4",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "tiny-invariant": "^1.2.0"
   },
@@ -22,6 +23,7 @@
     "@remix-run/dev": "^1.7.2",
     "@remix-run/eslint-config": "^1.7.2",
     "@types/react": "^18.0.15",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.23.1",
     "tailwindcss": "^3.1.8",
