--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
     "@remix-run/serve": "^1.7.2",
@@ -17,6 +18,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "remix-utils": "^3.3.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.23.1",
+    "prisma": "^4.4.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   },
