--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build:css": "npm run generate:css -- --minify",
     "dev": "remix dev",
     "dev:css": "npm run generate:css -- --watch",
-    "generate:css": "npx tailwindcss -o ./app/tailwind.css",
+    "generate:css": "npx tailwindcss -i ./app/base.css -o ./app/tailwind.css",
     "start": "remix-serve build"
   },
   "dependencies": {
